Updated service, tests

--- a/ConsoleVocabulary/ConsoleVocabulary/ConsoleVocabulary.csproj
+++ b/ConsoleVocabulary/ConsoleVocabulary/ConsoleVocabulary.csproj
@@ -84,6 +84,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="Data\categories.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
