--- a/ConsoleVocabulary/LearningTests/LearningTests.csproj
+++ b/ConsoleVocabulary/LearningTests/LearningTests.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="Respawn" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
