--- a/ConsoleVocabulary/ConsoleVocabulary/ConsoleVocabulary.csproj
+++ b/ConsoleVocabulary/ConsoleVocabulary/ConsoleVocabulary.csproj
@@ -88,6 +88,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
+    <None Include="Vocabulary.db3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Learning\Learning.csproj">
