--- a/MaterialAPI/MaterialAPI/appsettings.json
+++ b/MaterialAPI/MaterialAPI/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MaterialAPIContext": "Data Source=MaterialAPIContext-80735b02-378a-4c09-88ab-0bcbfd1b1b55.db",
-    "DefaultConnection": "C:\\develop\\material_Raquel\\learning_dotnet\\MaterialAPI\\MaterialAPI\\material.db3"
+    "MaterialAPIContext": "Data Source=material.db3"
   }
 }
