Set LastUse nullable, use generated database

--- a/MaterialAPI/MaterialAPI/appsettings.json
+++ b/MaterialAPI/MaterialAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MaterialAPIContext": "Data Source=material.db3"
+    "MaterialAPIContext": "Data Source=material2.db3"
   }
 }
