Set material location

--- a/MaterialAPI/MaterialAPI/appsettings.json
+++ b/MaterialAPI/MaterialAPI/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MaterialAPIContext": "Data Source=material2.db3"
-  }
+  },
+  "MaterialRootPath": "E:\\Material\\Bits" 
 }
